# export-cloudflare-dns

./: .env.example  .gitignore  .prettierrc.js  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: getdomains.js  main.rs
