[package]
name = "cloudflare-dns-exporter"
version = "1.0.0"
edition = "2021"
authors = ["Shane Turner"]
description = "Bulk export Cloudflare DNS records for all domains as text files"
license = "MIT"
repository = "https://github.com/shaneturner/export-cloudflare-dns"
keywords = ["cloudflare", "dns", "export", "backup"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
